--- a/index.html
+++ b/index.html
@@ -293,85 +293,173 @@
 		<p>
 			Player turns are primarily where rest, recuperation, and between scene actions occur.
 		</p>
-		<h2 id="gmTurn">The Game Master Turn</h2>
+		<h2 id="theGMsTurn">The GM's Turn</h2>
 			<p>
-				The GM turn is what most people think of when they think of action occurring during a game.
-				This is the time where the GM describes the environment and NPCs and takes direction or indirect actions to move the story.
-				This is when all combat, role play, and other challenges occur.
+				During the GM's Turn, it's the GM's job to beat the crap out of the player's characters.
+				It's his job to confront them, push them, and challenge them.
+				They can't prove themselves to be heroes if you go easy on them.
+				And the game is way more fun if its challenging.
+				If it's too easy, it's boring.
 			</p>
 			<p>
-				The GM turn is the actual adventure.
+				The GM starts the game with his turn.
+				He gets to set the weather and place the first obstacles in the group member's path.
+				That first obstacle should be something that directly gets in the way of the group fulfilling its mission, but it could also be just a continuation of the existing story.
 			</p>
+		<h2 id="thePlayersTurn">The Player's Turn</h2>
 			<p>
-				During the GM turn each time a PC fails a control test for Anger, Greed, Leadership, Lust, Morale, or Selfishness the will receive an extra free action during the next Player turn.
-				This means that if you provide the GM opportunites to use your character's weaknesses against you, you will benefit from it during the Player turn.
+				It's the GM's job to beat the crap out of your characters.
+				It's your job to survive the beating and overcome!
+				During the Player's Turn you may try to recover a bit and build up your resources in addition to taking care of other, miscellaneous business.
 			</p>
-		<h2 id="playerTurn">The Player Turn</h2>
-			<p>
-				The Player turn is what happens between adventures or even between scenes.
-				This is when players rest, recuperate, check in with contacts, maintain relationships, maintain businesses, etc.
-			</p>
-			<p>
-				Each player start with one free action they can take during their turn.
-				They can use this action to speak with their contacts, romance an NPC, recover from some condition, craft something, earn some silver, or any other action approved by the GM.
-			</p>
-			<p>
-				Free actions can't be used for any type of combat action or check.
-			</p>
-			<p>
-				Spending a free action requires a roll but is usually successful, unless the action is inappropriate for any NPCs involved or too large in scope or monetary value.
-				In the case of a failed roll for a free action, players can't try again during the same turn even if it was a different player that failed.
-				This is because there is limited time to perform actions.
-				For example: Two different players can't attempt to bride or seduce the same NPC at the same time.
-			</p>
-			<p>
-				Examples of successful free actions:
-			</p>
-			<ul>
-				<li>Find someone to use magic or a miracle to heal a lame limb</li>
-				<li>Strengthen your relationship with someone you know (spouse, paramour, mentor, child)</li>
-				<li>Romance that cute priest/priestess (working toward a marrige) at Inanna's temple</li>
-				<li>Romance someone with a much higher Charisma and Appearance or Social Class (long term)</li>
-				<li>Seduce that cute farm worker (one night stand)</li>
-				<li>Earn few silver quarters or a coin for some side work</li>
-				<li>Repair some damaged gear</li>
-				<li>Create a single weapon or piece of armor</li>
-				<li>Get/give some information from/to a contact or just strengthen your relationship</li>
-				<li>Make a new contact</li>
-				<li>Grant a favor</li>
-				<li>Cash in a favor</li>
-				<li>Master a spell</li>
-				<li>Create a new spell</li>
-				<li>Maintain an existing business (farm, loom, bakery)</li>
-				<li>Lay groundwork for a new business (farm, loom, bakery(</li>
-				<li>Go to court for a legal matter</li>
-				<li>Find a rare item from a merchant</li>
-			</ul>
-			<p>
-				Examples of unsuccessful free actions:
-			</p>
-			<ul>
-				<li>Find someone to use magic or a miracle to bring back the dead</li>
-				<li>Seduce a married man/women in a single try</li>
-				<li>Seduce someone with a much higher Charisma and Appearance or Social Class than you in a single try</li>
-				<li>Acquire a large amount of silver coins (finding hidden treasure, grifting, or stealing)</li>
-				<li>Create a new set of weapons and armor for one or more people</li>
-				<li>Master a new ability (this only occurs when you level)</li>
-				<li>Create a new business in a short period of time</li>
-			</ul>
-			<p>
-				Some actions that can't be performed with a single free action during a Player turn might be doable using multiple free actions.
-				For example: You might not be able to get a legal matter fully addressed by just going to court, but you might be able to if you speak to a contact, call in a favor, and seduce a witness.
-			</p>
-			<p>
-				During the GM turn each time a PC fails a control test for Anger, Greed, Leadership, Lust, Morale, or Selfishness the will receive an extra free action during the next Player turn.
-			</p>
-			<p>
-				Players may choose to give one or more of their free actions to another player to use during the Player turn.
-				It might be necessary for the group for one PC to use multiple free actions on the Player turn to do something that benefits the whole party or helps move the story forward.
-				Use of another PCs free actions might constitute the PC giving the free action actually doing the legwork, in which case the PC might want some kind of compensation.
-			</p>
-	
+			<h3 id="checksAndTests">Checks and Tests</h3>
+				<p>
+					Tests in the Player's Turn are limited.
+					Each player gets one free test.
+					You can use it for whatever you want - to recover, to find an old friend, to fashion new armor, to pick a fight, or buy a gift for your love.
+				</p>
+				<p>
+					If you want more tests, you must spend the checks you earned against your failed control tests in the GM's Turn.
+					When you fail an Anger, Greed, Leadership, Lust, Morale, or Selfishness control test place a check next to the appropriate attribute.
+					You earn one check for each failed control test that may be used in the next Player's Turn.
+					Even though a failed control test may hinder you during the GM's Turn, it helps you during the Player's Turn.
+					When you use them to get in your way in the GM's Turn, you get to do more stuff in the Player's Turn.
+					When you've used your free test and run out of checks to spend, you are done for this turn.
+				</p>
+				<p>
+					Each time you make a test, erase one of the checks next to your attributes.
+					Go around the table (in any order you decide) and do stuff.
+					The player starting with the most checks should probably go first.
+				</p>
+				<p>
+					You cannot spend a check for a test twice in a row; you may not make two tests in succession.
+					You get to make a test, then you have to let another player go.
+					Sometimes this means you get stuck with extra checks.
+					You've got a ton left, and nobody else has any.
+					What do you do?
+				</p>
+				<h4 id="passingTheChecks">Passing the Checks</h4>
+					<p>
+						If you have checks left in the Player's Turn, and one or more of your group members has none, you can donate your checks to them.
+						When it's their turn, tell them you're giving them a check and erase one from your character sheet.
+						Then they can take a turn and make a test as normal.
+						Once your out of checks, you're done.
+						Either the session's over, or it's the GM's turn now.
+					</p>
+					<p>
+						If you don't want to be donate checks to other players, you don't have to.
+						Just remember, you can't make two tests in a row in the Player's Turn.
+						So if you have a ton of checks and nobody else has any and you don't want to donate, you must discard your excess checks, erase them all from your character sheet, and end the Player's Turn.
+					</p>
+				<h4 id="onePlayerOneGM">One Player and the GM</h4>
+					<p>
+						If you're playing a game that consists of just one player and the GM, the sole player may spend all of her checks during the Player's Turn.
+						She is not restricted to the alternating checks/tests rule.
+						There is no one she can pass checks to!
+					</p>
+			<h3 id="recovery">Recovery</h3>
+				<p>
+					During the Player's Turn, you may try to recover from one or more of your conditions.
+					These could be lingering emotional states (Anger), illness, injury, fatigue, and exhaustion.
+					Recovery usually involves a test and therefore will either eat up your free roll or cost a check.
+				</p>
+			<h3 id="regroupReequip">Regroup, Reequip</h3>
+				<p>
+					The Player's Turn is also an excellent time to make tests for equipment, contacts, crafting, gathering of information, or creating new relationships with NPCs.
+				</p>
+			<h3 id="pickingFights">Picking Fights</h3>
+				<p>
+					During the Player's Turn you can also get into full-blown conflicts with fellow player's characters, your relationship characters, or characters the GM has introduced.
+					It costs one free test or one check, just like any other test, to start a conflict.
+					The conflict could be physical or it could be a control test.
+					Your victim or target doesn't have to spend any free test or check to fight back.
+				</p>
+				<h4 id="playingNiceAndNegotiatingGoals">Playing Nice and Negotiating Goals</h4>
+					<p>
+						Sometimes during play, you can get wrapped up in your character.
+						You want something so badly for her that you're prepared to fight for it, even if that means defying your own group members.
+					</p>
+					<p>
+						You can and should challenge your group members to conflicts like arguments and fights about your beliefs or your goals, but be nice about it.
+						Be fierce in your description of your character, but as a player, consult the other player and make sure he's comfortable with the direction you're taking.
+						If he's uncomfortable, negotiate a bit.
+						Explain where you're coming from and what you want. Try to find something that he's interested in fighting for in the conflict, not simply opposing you, but striving for his own goals or effect.
+						If you can't find something that you both want to fight over, then there's nothing to struggle over.
+						There's no conflict.
+						You're going to have to let the matter drop and move on.
+					</p>
+			<h3 id="checksInThePlayersTurn">Checks in the Player's Turn</h3>
+				<p>
+					You may use your attributes, skills, mastery, and other bonuses for your benefit in the Player's Turn, so long as it abides by the rules.
+					You may not use your attributes, skills, mastery, or other bonuses to hinder your character to gain more checks during the Player's Turn.
+				</p>
+			<!--
+			<h3 id="failureInThePlayersTurn">Failure in the Player's Turn</h3>
+				<p>
+					The GM can apply conditions and twists as per the normal rules during the Player's Turn.
+				</p>
+				<h4 id="twistsInThePlayersTurn">Twists in the Player's Turn</h4>
+					<p>
+						Twists in the Player's Turn are tricky.
+						If you're playing an extended session, and following the Player's Turn immediately with a GM's Turn, then use them as normal - confront the players with new obstacles to be overcome.
+					</p>
+					<p>
+						If you're ending your session on the Player's Turn, you don't want to use twists to create immediate confrontations.
+						The player's won't be able to handle them, and that's not why the Player's Turn exists.
+						In this case, use twists to create long term problems - new enemies, shortages, epidemics - or use the to create cliffhanger endings.
+						A new problem crops up, but you end the session with "When next we meet, we shall confront..."
+					</p>
+					<p>
+						If you're stuck for ideas for twists in the Player's Turn, don't hesitate to use conditions.
+						They're just as satisfying, especially when the patrol just recovered from being Hungry, Angry, and Fatigued!
+					</p>
+			<h3 id="gmsRoleInThePlayersTurn">The GM's Role in the Player's Turn</h3>
+				<p>
+					The GM doesn't get to sit around during the Player's Turn and just watch.
+					He has three very important duties: prompt the player's with the rules, play up their relationships, and stay involved!
+				</P>
+				<h4 id="promptThePlayersWithTheRules">Prompt the Players with the Rules</h4>
+					<p>
+						During the Player's Turn, the players are in control of the pacing.
+						They get to relax and think about what they need and want.
+						The GM's job here is to prompt and nudge them along.
+						Suggest ways to help them use their checks.
+						If the players are discussing something, invite them to use a conflict or at least a control test to resolve the matter.
+					</p>
+				<h4 id="playTheRelationshipsAndCharacters">Play the Relationships and Characters</h4>
+					<p>
+						Friends, enemies, mentors, parents, and lovers are more likely to be called on for help during the Player's Turn.
+						The GM must be ready to play them in a convincing and believable manner.
+						You've got to steop up and get into character.
+						These characters do have their own agendas, but aside from enemies, they should all be helpful and reasonable.
+					</p>
+				<h4 id="stayInvolved">Stay Involved</h4>
+					<p>
+						Stay involved in inter-player disputes.
+						If the players engage each other, arguing or fighting, the GM should stay involved.
+						Use an NPC to play into the situation.
+						The NPC can offer his or her perspective and help.
+						And, as the GM, you should offer advice on the rules including suggesting controls tests to resolve disputes.
+					</p>
+			<h3 id="otherPlayersRolesDuringThePlayersTurn">Other Player's Roles During the Player's Turn</h3>
+				<p>
+					The Player's Turn starts with one player spending a free action or a check to bring her character into the spotlight.
+					That player can work to accomplish her goals, it's her moment to shine.
+					If it's not your turn, what do you do?
+				</p>
+				<p>
+					Contribute to your group member's turn.
+					Offer to help.
+					If he's stuck for an idea for spending his checks, make helpful suggestions.
+					If he's out of checks, pass him one of yours so he can be part of the game.
+				</p>
+				<p>
+					Table chatter is strongly encouraged during the Player's Turn.
+					It's okay to strategize a bit to ensure that everyone can accomplish their goals.
+					But overall, even if your <i>characters</i> are feuding in the plot of the game, strive to be a helpful, thoughtful, contrbuting <i>player</i>.
+				</p>
+			-->
+				
 	
 	<h1 id="combat">Combat</h1>
 	<p>
