--- a/index.html
+++ b/index.html
@@ -555,6 +555,327 @@
 	<br/>
 	<h2 id="meleeWeapons">Melee Weapons</h2>
 	
+	<table border>
+		<tr>
+			<th>Passive<br/>Action</th>
+			<th>Hit Body<br/>Location</th>
+			<th>&lt;-5</th>
+			<th>-5</th>
+			<th>-4</th>
+			<th>-3</th>
+			<th>-2</th>
+			<th>-1</th>
+			<th>0</th>
+			<th>1</th>
+			<th>2</th>
+			<th>3</th>
+			<th>4</th>
+			<th>5</th>
+			<th>6</th>
+			<th>7</th>
+			<th>8</th>
+			<th>9</th>
+			<th>10</th>
+			<th>11</th>
+			<th>12</th>
+			<th>13</th>
+			<th>&gt;13</th>
+		</tr>
+		<tr>
+			<td rowspan="2">Failure</td>
+			<td>Miss</td>
+			<td class="num">00-00</td>
+			<td>01-41</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+		</tr>
+		<tr>
+			<td>Shield or Trunk<br/>if unshielded</td>
+			<td>42-52</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+		</tr>
+		<tr>
+			<td rowspan="2">Partial</td>
+			<td>Trunk</td>
+			<td>53-63</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>	
+		</tr>
+		<tr>
+			<td>Face</td>
+			<td>64-75</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>	
+		</tr>
+		<tr>
+			<td rowspan="4">Substantial</td>
+			<td>Head</td>
+			<td>76-84</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>	
+		</tr>
+		<tr>
+			<td>Sword Arm</td>
+			<td>85-92</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>	
+		</tr>
+		<tr>
+			<td>Shield or Other Arm<br/>if unshielded</td>
+			<td>93-97</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>	
+		</tr>
+		<tr>
+			<td>Guts</td>
+			<td>98-103</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>	
+		</tr>
+		<tr>
+			<td rowspan="4">Total</td>
+			<td>Right Leg</td>
+			<td>104-108</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>	
+		</tr>
+		<tr>
+			<td>Left Leg</td>
+			<td>109-112</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>	
+		</tr>
+		<tr>
+			<td>Throat</td>
+			<td>113-114</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>	
+		</tr>
+		<tr>
+			<td>Heart</td>
+			<td>115</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>
+			<td>00-00</td>	
+		</tr>
+	</table>
+
+	
 	<h1 id="magic">Magic</h1>
 
 	<h1 id="piety">Piety</h1>
