--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 	<br/>
 	<h2 id="meleeWeapons">Melee Weapons</h2>
 	
-	<table border>
+	<table style="padding:0px;border-collapse: separate;border-spacing:0px;">
 		<tr>
 			<th>Passive<br/>Action</th>
 			<th>Hit Body<br/>Location</th>
