--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 		background-color: #FFCCCC;
 	}
 	</style>
+	<style>
+	table.combat > tbody > tr > td {
+		text-align:center;
+	}
+	</style>
 </head>
 <body style="padding-top:80px">
 <div id="header">
@@ -555,7 +560,7 @@
 	<br/>
 	<h2 id="meleeWeapons">Melee Weapons</h2>
 	
-	<table style="padding:0px;border-collapse: separate;border-spacing:0px;">
+	<table border="1" class="combat">
 		<tr>
 			<th>Passive<br/>Action</th>
 			<th>Hit Body<br/>Location</th>
@@ -584,51 +589,51 @@
 		<tr>
 			<td rowspan="2">Failure</td>
 			<td>Miss</td>
-			<td class="num">00-00</td>
 			<td>01-41</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
+			<td>01-40</td>
+			<td>01-38</td>
+			<td>01-37</td>
+			<td>01-35</td>
+			<td>01-34</td>
+			<td>01-32</td>
+			<td>01-31</td>
+			<td>01-29</td>
+			<td>01-28</td>
+			<td>01-26</td>
+			<td>01-25</td>
+			<td>01-23</td>
+			<td>01-22</td>
+			<td>01-20</td>
+			<td>01-19</td>
+			<td>01-17</td>
+			<td>01-16</td>
+			<td>01-14</td>
+			<td>01-12</td>
+			<td>01-10</td>
 		</tr>
 		<tr>
 			<td>Shield or Trunk<br/>if unshielded</td>
 			<td>42-52</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
-			<td>00-00</td>
+			<td>41-49</td>
+			<td>39-47</td>
+			<td>38-45</td>
+			<td>36-43</td>
+			<td>35-42</td>
+			<td>33-41</td>
+			<td>32-39</td>
+			<td>30-37</td>
+			<td>29-36</td>
+			<td>27-35</td>
+			<td>26-33</td>
+			<td>24-30</td>
+			<td>23-28</td>
+			<td>21-25</td>
+			<td>20-23</td>
+			<td>18-20</td>
+			<td>17-18</td>
+			<td>15</td>
+			<td>13</td>
+			<td>11</td>
 		</tr>
 		<tr>
 			<td rowspan="2">Partial</td>
@@ -851,7 +856,7 @@
 		</tr>
 		<tr>
 			<td>Heart</td>
-			<td>115</td>
+			<td>115+</td>
 			<td>00-00</td>
 			<td>00-00</td>
 			<td>00-00</td>
