--- a/index2.html
+++ b/index2.html
@@ -111,6 +111,15 @@
 		<table style="padding:0px;border-collapse: separate;border-spacing:0px;">
 			<tr><td><b>SECTION INCOMPLETE</b></td></tr>
 		</table>
+		<ul>
+			<li>Intelligence: This is your capacity to comprehend situations, analyze problems, learn facts, or otherwise exercise the force of reason. It is of general importance in all aspects of adventuring. It is a prime characteristic for Magical characters, a secondary characteristic of Adventurer and Religious characters. Variable by level.</li>
+			<li>Faith: This is your intuitive understanding of the Ethereal plane, and the hidden workings of the universe. It is a primary characteristic for Magical and Religious characters. Variable by level.</li>
+			<li>Star Sign: This is the astrological influence under which your character was born. It has considerable effect on characteristics (see above) and on the excercise of magic. Invariable.</li>
+			<li>Literacy: This defines how well your character can read or write. Add Intelligence and Social Class points over 12 (subtract points below 8) and multiply by 10. Add 10 percent if the character is Magical or Religious, subtract 10 percent if the character is an Adventurer. Roll d100. If it rolls below the percentage, your character is literate, can read and write any language he knows. Variable, once Intelligence and Social Class have both increased test again.</li>
+			<li>Languages: Halve the percentage required for literacy. This is the chance of your character knowing any of the human languages you will encounter in the adventure. Invariable.</li>
+			<li>Mana: The emanation of the Ethereal plane, and the source of magical power on Earth. Mana has to be accumulated, and is limited by Magical or Religious level. The normal limit is 16 mana per Magical and Religious level.</li>
+			<li>Piety: This defines your relationship with the Higher powers you serve. It is of particular importance to Religious characters, but can also affect drastically the lives (and afterlives) of other characters. Piety varies from hour to hour, being gained and lost by certain actions approved of by your powers.</li>
+		</ul>
 		<h2 id="personalityAttributes">Personality Factors</h2>
 		<table style="padding:0px;border-collapse: separate;border-spacing:0px;">
 			<tr><td><b>SECTION INCOMPLETE</b></td></tr>
