--- a/index2.html
+++ b/index2.html
@@ -108,9 +108,6 @@
 			<li>Endurance: This ability defines your ability to survive hardship, disease, or other physical damage (i.e. combat). It is a prime characteristic for Adventurer characters, a secondary characteristic for Religious and Magical characters. Endurance points are lost during adventures, but return during rest towards this maximum. Variable by level.</li>
 		</ul>
 		<h2 id="mentalAttributes">Mental Attributes / Magical and Religious Factors</h2>
-		<table style="padding:0px;border-collapse: separate;border-spacing:0px;">
-			<tr><td><b>SECTION INCOMPLETE</b></td></tr>
-		</table>
 		<ul>
 			<li>Intelligence: This is your capacity to comprehend situations, analyze problems, learn facts, or otherwise exercise the force of reason. It is of general importance in all aspects of adventuring. It is a prime characteristic for Magical characters, a secondary characteristic of Adventurer and Religious characters. Variable by level.</li>
 			<li>Faith: This is your intuitive understanding of the Ethereal plane, and the hidden workings of the universe. It is a primary characteristic for Magical and Religious characters. Variable by level.</li>
@@ -121,9 +118,14 @@
 			<li>Piety: This defines your relationship with the Higher powers you serve. It is of particular importance to Religious characters, but can also affect drastically the lives (and afterlives) of other characters. Piety varies from hour to hour, being gained and lost by certain actions approved of by your powers.</li>
 		</ul>
 		<h2 id="personalityAttributes">Personality Factors</h2>
-		<table style="padding:0px;border-collapse: separate;border-spacing:0px;">
-			<tr><td><b>SECTION INCOMPLETE</b></td></tr>
-		</table>
+		<ul>
+			<li>Charisma: This characteristic defines your popularity, plausibility, persuasiveness, charm and, above all, self confidence. If is of considerable importance in determining the ease of your relations with others. It is a secondary characteristic for Adventurer, Magical, and Religious characters. Variable by level.</li>
+			<li>Appearance: This characteristic defines your physical attractiveness, your health as it relates to your appearance (such as lustrous hair, flawles skin, pleasant body odor), your body tone, and proportions. Invariable.</li>
+			<li>Social Class: The most important characteristic of all, in hierarchial midieval society. Social class affects your wealth, standing, leadership, etc. In the short term, it defines what kind of social position and occupation your character will hold at the start of the his adventuring career. Social Class increases as certain set points in that career (see <a href="#experience">Experience</a>), and can be purchased at great cost. Variable by experience.</li>
+			<li>Bravery, Greed, Selfishness, and Lust: These four factors define the personality of your character. The higher the factor, the more pronounced the tendency. Bravery (including Anger) is a prime characteristic for Adventurer characters, a secondary characteristic for Magical and Religious characters. Greed, Selfishness, and Lust are prime characteristics for Religious characters; the lower the better! Variable with level.</li>
+			<li>Leadership: This defines your capcity to command men and obtain obedience and respect from others, especially to the adventuring party. Apply the calculation: ((2 x Charisma) + (2 x Appearance) + Physique + Intelligence + Bravery + (4 x Social Class)) / 10. Then add half (round up) your character's highest level (Adventurer, Magical, or Religious). Variable by level.</li>
+			<li>Special Attributes: These reflect special abilities such as bogeys, blessings, curses, racial abilities, etc.</li>
+		</ul>
 		<h2 id="socialBackground">Social Background</h2>
 		<table style="padding:0px;border-collapse: separate;border-spacing:0px;">
 			<tr><td><b>SECTION INCOMPLETE</b></td></tr>
