--- a/combatbook.html
+++ b/combatbook.html
@@ -1,5 +1,584 @@
-<table>
-  <tr>
-    <td></td>
-   </tr>
+<style>
+body, table, tr, th, td {
+	font: normal 9pt Tahoma;
+}
+td.orange {
+	color:white;
+	background-color:orange;
+}
+td.red {
+	color:white;
+	background-color:crimson;
+}
+td.blue {
+	color:white;
+	background-color:cornflowerblue;
+}
+td.green {
+	color:white;
+	background-color:green;
+}
+td.yellow {
+	color:black;
+	background-color:yellow;
+}
+td.white {
+	color:black;
+	background-color:#EEEEEE;
+}
+td.black {
+	color:white;
+	background-color:black;
+}
+td.brown {
+	color:white;
+	background-color:brown;
+}
+</style>
+<table border="1" cellspacing="0">
+	<tr>
+		<th colspan="2">Adventurer Melee</th>
+		<th>PG</th>
+		<th>XR</th>
+		<th colspan="2">Adventurer Ranged</th>
+		<th>PG</th>
+		<th>XR</th>
+		<th colspan="2">Magical</th>
+		<th>PG</th>
+		<th>XR</th>
+		<th colspan="2">Religious</th>
+		<th>PG</th>
+		<th>XR</th>
+	</tr>
+	<tr>
+		<td rowspan="2">Down Swing</td>
+		<td class="orange">Bash</td>
+		<td></td>
+		<td></td>
+		<td rowspan="2">Down Swing</td>
+		<td class="orange">&nbsp;</td>
+		<td></td>
+		<td></td>
+		<td rowspan="2">Down Swing</td>
+		<td class="orange">&nbsp;</td>
+		<td></td>
+		<td></td>
+		<td rowspan="2">Down Swing</td>
+		<td class="orange">&nbsp;</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="orange">Smash</td>
+		<td></td>
+		<td></td>
+		<td class="orange">Smash</td>
+		<td></td>
+		<td></td>
+		<td class="orange">Smash</td>
+		<td></td>
+		<td></td>
+		<td class="orange">Smash</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td rowspan="3">Side Swing</td>
+		<td class="orange">Strong</td>
+		<td></td>
+		<td></td>
+		<td rowspan="3">Kicks</td>
+		<td class="orange">Heavy</td>
+		<td></td>
+		<td></td>
+		<td rowspan="3">Side Swing</td>
+		<td class="orange">Strong</td>
+		<td></td>
+		<td></td>
+		<td rowspan="3">Side Swing</td>
+		<td class="orange">Strong</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td rowspan="2">Thrust</td>
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+		<td rowspan="2">Thrust Bow or Arrow</td>
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+		<td rowspan="2">Thrust</td>
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+		<td rowspan="2">Thrust</td>
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td rowspan="4">Feint</td>
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+		<td rowspan="2">Swing Bow</td>
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+		<td rowspan="4">Feint</td>
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+		<td rowspan="4">Feint</td>
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="blue">Side Swing</td>
+		<td></td>
+		<td></td>
+		<td rowspan="2">Single Shot</td>
+		<td class="blue">Sniping Shot</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Side Swing</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Side Swing</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="red">Thrust</td>
+		<td></td>
+		<td></td>
+		<td class="red">Snapshot</td>
+		<td></td>
+		<td></td>
+		<td class="red">Thrust</td>
+		<td></td>
+		<td></td>
+		<td class="red">Thrust</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td rowspan="3">Protected Attacks</td>
+		<td class="orange">Down Swing</td>
+		<td></td>
+		<td></td>
+		<td rowspan="3">Aimed Shots</td>
+		<td class="orange">Careful Shot</td>
+		<td></td>
+		<td></td>
+		<td rowspan="3">Protected Attacks</td>
+		<td class="orange">Down Swing</td>
+		<td></td>
+		<td></td>
+		<td rowspan="3">Protected Attacks</td>
+		<td class="orange">Down Swing</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="blue">Side Swing</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Aimed Low</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Side Swing</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Side Swing</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="red">Thrust</td>
+		<td></td>
+		<td></td>
+		<td class="red">Aimed High</td>
+		<td></td>
+		<td></td>
+		<td class="red">Thrust</td>
+		<td></td>
+		<td></td>
+		<td class="red">Thrust</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td rowspan="4">Special</td>
+		<td class="blue">Kick</td>
+		<td></td>
+		<td></td>
+		<td rowspan="4">Special</td>
+		<td class="blue">Kick</td>
+		<td></td>
+		<td></td>
+		<td rowspan="4">Special</td>
+		<td class="blue">Kick</td>
+		<td></td>
+		<td></td>
+		<td rowspan="4">Special</td>
+		<td class="blue">Kick</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="yellow">Wild Swing</td>
+		<td></td>
+		<td></td>
+		<td class="yellow">Wild Swing</td>
+		<td></td>
+		<td></td>
+		<td class="yellow">Wild Swing</td>
+		<td></td>
+		<td></td>
+		<td class="yellow">Wild Swing</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="blue">Dislodge Weapon</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Dislodge Weapon</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Dislodge Weapon</td>
+		<td></td>
+		<td></td>
+		<td class="blue">Dislodge Weapon</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="green">Retrieve Weapon</td>
+		<td></td>
+		<td></td>
+		<td class="green">Retrieve Weapon</td>
+		<td></td>
+		<td></td>
+		<td class="green">Retrieve Weapon</td>
+		<td></td>
+		<td></td>
+		<td class="green">Retrieve Weapon</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td rowspan="2">Shield Block</td>
+		<td class="green">High</td>
+		<td></td>
+		<td></td>
+		<td rowspan="2">&nbsp;</td>
+		<td class="green"></td>
+		<td></td>
+		<td></td>
+		<td rowspan="2">Shield Block</td>
+		<td class="green">High</td>
+		<td></td>
+		<td></td>
+		<td rowspan="2">Shield Block</td>
+		<td class="green">High</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="green">Low</td>
+		<td></td>
+		<td></td>
+		<td class="green"></td>
+		<td></td>
+		<td></td>
+		<td class="green">Low</td>
+		<td></td>
+		<td></td>
+		<td class="green">Low</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td rowspan="4">Jump</td>
+		<td class="green">Up</td>
+		<td></td>
+		<td></td>
+		<td rowspan="4">Jump</td>
+		<td class="green">Up</td>
+		<td></td>
+		<td></td>
+		<td rowspan="4">Jump</td>
+		<td class="green">Up</td>
+		<td></td>
+		<td></td>
+		<td rowspan="4">Jump</td>
+		<td class="green">Up</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="yellow">Dodge</td>
+		<td></td>
+		<td></td>
+		<td class="yellow">Dodge</td>
+		<td></td>
+		<td></td>
+		<td class="yellow">Dodge</td>
+		<td></td>
+		<td></td>
+		<td class="yellow">Dodge</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="green">Duck</td>
+		<td></td>
+		<td></td>
+		<td class="green">Duck</td>
+		<td></td>
+		<td></td>
+		<td class="green">Duck</td>
+		<td></td>
+		<td></td>
+		<td class="green">Duck</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td class="yellow">Away</td>
+		<td></td>
+		<td></td>
+		<td class="yellow">Away</td>
+		<td></td>
+		<td></td>
+		<td class="yellow">Away</td>
+		<td></td>
+		<td></td>
+		<td class="yellow">Away</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<th>XR Manuevers</th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th>XR Manuevers</th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th>XR Manuevers</th>
+		<th></th>
+		<th></th>
+		<th></th>
+		<th>XR Manuevers</th>
+		<th></th>
+		<th></th>
+		<th></th>
+	</tr>
+	<tr>
+		<td></td>
+		<td class="white">Charge</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="white">Charge</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="white">Charge</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="white">Charge</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td></td>
+		<td class="black">Swing High</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="black">Swing High</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="black">Swing High</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="black">Swing High</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td></td>
+		<td class="black">Swing Low</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="black">Swing Low</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="black">Swing Low</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="black">Swing Low</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td></td>
+		<td class="white">Thrust High</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="white">Thrust High</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="white">Thrust High</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="white">Thrust High</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td></td>
+		<td class="white">Thrust Low</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="white">Thrust Low</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="white">Thrust Low</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="white">Thrust Low</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td></td>
+		<td class="brown">Block & Close</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="brown">Block & Close</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="brown">Block & Close</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="brown">Block & Close</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td></td>
+		<td class="brown">Dodge</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="brown">Dodge</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="brown">Dodge</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="brown">Dodge</td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td></td>
+		<td class="brown">Jump Back</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="brown">Jump Back</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="brown">Jump Back</td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td class="brown">Jump Back</td>
+		<td></td>
+		<td></td>
+	</tr>
 </table>
